# reliability-layer-api

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/adapters/: redis_client.py
app/api/routes/: health.py  proxy.py
app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  errors.py  http_client.py  ids.py  logging.py  metrics.py  rate_limit.py  retry.py  security.py
deployments/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deployments/docker/grafana/dashboards/: reliability-layer.json
deployments/docker/grafana/provisioning/dashboards/: dashboards.yml
tests/: conftest.py
tests/integration/: test_health.py  test_metrics.py  test_proxy_success.py  test_proxy_timeout.py  test_proxy_upstream_429_passthrough.py  test_proxy_upstream_500_stale_fallback.py
tests/unit/: test_cache_key.py  test_circuit_breaker.py  test_config.py  test_rate_limit.py  test_retry.py
tools/: __init__.py
tools/upstream_sim/: Dockerfile  __init__.py  app.py
